adding book, find bug, next commit will fix it

--- a/src/main/resources/translations/bundle.properties
+++ b/src/main/resources/translations/bundle.properties
@@ -25,3 +25,7 @@ deleteSection=Delete selected chapter/poem
 moveUp=Move selected chapter/poem up
 moveDown=Move selected chapter/poem down
 exportSelectedBookAsText=Export selected book as text
+enterBookName=Enter the name of the new book:
+shortBookName=The name of the book cannot be empty!
+error=Error!
+existingBook=There is already a book with a same name!
