complete book manipulation is working

--- a/src/main/resources/translations/bundle.properties
+++ b/src/main/resources/translations/bundle.properties
@@ -29,3 +29,10 @@ enterBookName=Enter the name of the new book:
 shortBookName=The name of the book cannot be empty!
 error=Error!
 existingBook=There is already a book with a same name!
+noBookSelected=No book is selected. Please, select book and repeat action.
+reallyDeleteBook=The book will be removed permanently including all chapters and poems.\nAre you sure?
+areYouSure=Are you sure?
+bookEditing=Editing book:
+title=Title
+author=Author
+ok=OK
