adding and removing sections works

--- a/src/main/resources/translations/bundle.properties
+++ b/src/main/resources/translations/bundle.properties
@@ -30,9 +30,18 @@ shortBookName=The name of the book cannot be empty!
 error=Error!
 existingBook=There is already a book with a same name!
 noBookSelected=No book is selected. Please, select book and repeat action.
-reallyDeleteBook=The book will be removed permanently including all chapters and poems.\nAre you sure?
+reallyDeleteBook=The selected book will be removed permanently including all chapters and poems.\nAre you sure?
 areYouSure=Are you sure?
 bookEditing=Editing book:
 title=Title
 author=Author
 ok=OK
+enterChapterName=Enter the name of the new chapter:
+shortChapterName=The name of the chapter cannot be empty!
+existingChapterOrPoem=There is already a chapter with a same name!
+enterPoemName=Enter the name of the new poem:
+shortPoemName=The name of the poem cannot be empty!
+poem=Poem
+chapter=Chapter
+reallyDeleteSection=The selected chapter or poem will be removed permanently.\nAre you sure?
+noSectionSelected=No chapter or poem is selected. Please, select chapter or poem and repeat action.
