moving sections work

--- a/src/main/resources/translations/bundle.properties
+++ b/src/main/resources/translations/bundle.properties
@@ -45,3 +45,6 @@ poem=Poem
 chapter=Chapter
 reallyDeleteSection=The selected chapter or poem will be removed permanently.\nAre you sure?
 noSectionSelected=No chapter or poem is selected. Please, select chapter or poem and repeat action.
+sectionEditing=Editing chapter or poem:
+firstCannotBeMoved=First section or poem cannot be moved up!
+lastCannotBeMoved=Last section or poem cannot be moved down!
