--- a/src/main/resources/translations/bundle.properties
+++ b/src/main/resources/translations/bundle.properties
@@ -48,3 +48,4 @@ noSectionSelected=No chapter or poem is selected. Please, select chapter or poem
 sectionEditing=Editing chapter or poem:
 firstCannotBeMoved=First section or poem cannot be moved up!
 lastCannotBeMoved=Last section or poem cannot be moved down!
+wrongSavingFile=Something went wrong when saving file:
