opening files now works

--- a/src/main/resources/translations/bundle.properties
+++ b/src/main/resources/translations/bundle.properties
@@ -49,3 +49,4 @@ sectionEditing=Editing chapter or poem:
 firstCannotBeMoved=First section or poem cannot be moved up!
 lastCannotBeMoved=Last section or poem cannot be moved down!
 wrongSavingFile=Something went wrong when saving file:
+wrongOpeningFile=Something went wrong when opening file:
