base of about window is done

--- a/src/main/resources/translations/bundle.properties
+++ b/src/main/resources/translations/bundle.properties
@@ -50,3 +50,4 @@ firstCannotBeMoved=First section or poem cannot be moved up!
 lastCannotBeMoved=Last section or poem cannot be moved down!
 wrongSavingFile=Something went wrong when saving file:
 wrongOpeningFile=Something went wrong when opening file:
+aboutTypewriter=About Typewriter application
