about window complete except text sizes and styles

--- a/src/main/resources/translations/bundle.properties
+++ b/src/main/resources/translations/bundle.properties
@@ -51,3 +51,7 @@ lastCannotBeMoved=Last section or poem cannot be moved down!
 wrongSavingFile=Something went wrong when saving file:
 wrongOpeningFile=Something went wrong when opening file:
 aboutTypewriter=About Typewriter application
+uhl1k=uhl1k (Roman Janků)
+gnugpl=GNU General Public License v3
+licenseUrl=http//url
+repoUrl=https://github.com/uhl1k
