--- a/src/main/resources/translations/bundle.properties
+++ b/src/main/resources/translations/bundle.properties
@@ -53,5 +53,5 @@ wrongOpeningFile=Something went wrong when opening file:
 aboutTypewriter=About Typewriter application
 uhl1k=uhl1k (Roman Janků)
 gnugpl=GNU General Public License v3
-licenseUrl=http//url
-repoUrl=https://github.com/uhl1k
+licenseUrl=https://www.gnu.org/licenses/gpl-3.0.html
+repoUrl=https://github.com/uhl1k/Typewriter
