--- a/src/main/resources/translations/bundle.properties
+++ b/src/main/resources/translations/bundle.properties
@@ -55,3 +55,4 @@ uhl1k=uhl1k (Roman Janků)
 gnugpl=GNU General Public License v3
 licenseUrl=https://www.gnu.org/licenses/gpl-3.0.html
 repoUrl=https://github.com/uhl1k/Typewriter
+licenseNotFound=The text of the license was not found in this archive.
