about window looks nice now

--- a/src/main/resources/translations/bundle.properties
+++ b/src/main/resources/translations/bundle.properties
@@ -56,3 +56,4 @@ gnugpl=GNU General Public License v3
 licenseUrl=https://www.gnu.org/licenses/gpl-3.0.html
 repoUrl=https://github.com/uhl1k/Typewriter
 licenseNotFound=The text of the license was not found in this archive.
+linkError=Error occurred when opening link.
