Started implementation of font choosing.

--- a/src/main/resources/translations/bundle_cs.properties
+++ b/src/main/resources/translations/bundle_cs.properties
@@ -57,3 +57,5 @@ licenseUrl=https://www.gnu.org/licenses/gpl-3.0.html
 repoUrl=https://github.com/uhl1k/Typewriter
 licenseNotFound=Text licence nebyl nalezen v tomto archivu.
 linkError=Došlo k chybě během otevírání odkazu.
+options=Možnosti
+fontOptions=Možnosti fontu
