--- a/src/main/resources/translations/bundle_sk.properties
+++ b/src/main/resources/translations/bundle_sk.properties
@@ -57,3 +57,5 @@ licenseUrl=https://www.gnu.org/licenses/gpl-3.0.html
 repoUrl=https://github.com/uhl1k/Typewriter
 licenseNotFound=Text licencie nebol nájdený v tomto archíve.
 linkError=Došlo k chybe počas otvárania odkazu.
+options=Možnosti
+fontOptions=Možnosti fontu
