added messages translations

--- a/src/main/resources/translations/bundle.properties
+++ b/src/main/resources/translations/bundle.properties
@@ -59,3 +59,4 @@ licenseNotFound=The text of the license was not found in this archive.
 linkError=Error occurred when opening link.
 options=Options
 fontOptions=Font options
+fileError=Given file does not exists or program cannot access it.
