--- a/src/main/resources/translations/bundle_cs.properties
+++ b/src/main/resources/translations/bundle_cs.properties
@@ -59,4 +59,4 @@ licenseNotFound=Text licence nebyl nalezen v tomto archivu.
 linkError=Došlo k chybě během otevírání odkazu.
 options=Možnosti
 fontOptions=Možnosti fontu
-fileError=Given file does not exists or program cannot access it.
+fileError=Uvedený soubor neexistuje nebo k němu program nemůže přistupovat.
