--- a/src/main/resources/translations/bundle_sk.properties
+++ b/src/main/resources/translations/bundle_sk.properties
@@ -59,3 +59,4 @@ licenseNotFound=Text licencie nebol nájdený v tomto archíve.
 linkError=Došlo k chybe počas otvárania odkazu.
 options=Možnosti
 fontOptions=Možnosti fontu
+fileError=Uvedený súbor neexistuje alebo ho program nemôže číst.
