added logging and better handling of errors

--- a/src/main/resources/translations/bundle_cs.properties
+++ b/src/main/resources/translations/bundle_cs.properties
@@ -60,3 +60,4 @@ linkError=Došlo k chybě během otevírání odkazu.
 options=Možnosti
 fontOptions=Možnosti fontu
 fileError=Uvedený soubor neexistuje nebo k němu program nemůže přistupovat.
+optionsError=Aplikace nemůže pracovat se souborem s nastavením.
