--- a/src/main/resources/translations/bundle.properties
+++ b/src/main/resources/translations/bundle.properties
@@ -60,3 +60,4 @@ linkError=Error occurred when opening link.
 options=Options
 fontOptions=Font options
 fileError=Given file does not exists or program cannot access it.
+optionsError=Application cannot access options file.
