--- a/src/main/resources/translations/bundle_sk.properties
+++ b/src/main/resources/translations/bundle_sk.properties
@@ -60,3 +60,4 @@ linkError=Došlo k chybe počas otvárania odkazu.
 options=Možnosti
 fontOptions=Možnosti fontu
 fileError=Uvedený súbor neexistuje alebo ho program nemôže číst.
+optionsError=Aplikácia nemôže pracovať so súborom s nastavením.
