added page size option

--- a/src/main/resources/translations/bundle.properties
+++ b/src/main/resources/translations/bundle.properties
@@ -62,3 +62,5 @@ options=Options
 fontOptions=Font options
 fileError=Given file does not exists or program cannot access it.
 optionsError=Application cannot access options file.
+enterPageSize=Enter size fo the page in the book:
+exportLatex=Export as LaTeX
